--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@progress/kendo-theme-bootstrap": "^7.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "sass": "^1.69.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
